--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1266,7 +1266,7 @@
 												<div
 													class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 													<div class="wpb_wrapper">
-														<p style="text-align: center;">Complete the form below with essential details. Our team will promptly review your submission. Fields marked with () are mandatory.
+														<p style="text-align: center;">Complete the form below with essential details. Our team will promptly review your submission. Fields marked with (*) are mandatory.
 														</p>
 													</div>
 												</div>
