--- a/partners/index.html
+++ b/partners/index.html
@@ -1241,8 +1241,8 @@
 									</div>
 								</div>
 							</div>
-			
-		
+
+
 							<div id="fws_64bdb855403b6" data-column-margin="default" data-midnight="dark"
 								class="wpb_row vc_row-fluid vc_row" style="padding-top: 0px; padding-bottom: 0px; ">
 								<div class="row-bg-wrap" data-bg-animation="none" data-bg-animation-delay=""
@@ -1265,7 +1265,8 @@
 														<div class="hover-wrap"
 															style="box-shadow: 20px 20px 60px 0px rgba(0,0,0,0.5);">
 															<div class="hover-wrap-inner">
-																<a href=": https://twitter.com/bullyverse_eth" target="_blank" class="center">
+																<a href=": https://twitter.com/bullyverse_eth"
+																	target="_blank" class="center">
 																	<img class="img-with-animation skip-lazy  nectar-lazy"
 																		data-delay="0" height="768" width="768"
 																		data-animation="fade-in"
@@ -1304,7 +1305,8 @@
 														<div class="hover-wrap"
 															style="box-shadow: 20px 20px 60px 0px rgba(0,0,0,0.5);">
 															<div class="hover-wrap-inner">
-																<a href="https://twitter.com/ALPHAT0KEN" target="_blank" class="center">
+																<a href="https://twitter.com/ALPHAT0KEN" target="_blank"
+																	class="center">
 																	<img class="img-with-animation skip-lazy  nectar-lazy"
 																		data-delay="0" height="768" width="768"
 																		data-animation="fade-in"
@@ -1331,46 +1333,46 @@
 										</div>
 									</div>
 									<div class="vc_col-sm-4 wpb_column column_container vc_column_container col no-extra-padding inherit_tablet inherit_phone "
-									data-padding-pos="all" data-has-bg-color="false" data-bg-color=""
-									data-bg-opacity="1" data-animation="" data-delay="0">
-									<div class="vc_column-inner">
-										<div class="wpb_wrapper">
-											<div class="img-with-aniamtion-wrap center" data-max-width="100%"
-												data-max-width-mobile="default" data-border-radius="10px"
-												data-shadow="custom" data-animation="fade-in"
-												style="margin-top: 5%; margin-right: 8%; margin-bottom: 5%; margin-left: 8%;">
-												<div class="inner">
-													<div class="hover-wrap"
-														style="box-shadow: 20px 20px 60px 0px rgba(0,0,0,0.5);">
-														<div class="hover-wrap-inner">
-															<a href="https://twitter.com/FunApes_NFT"
-																target="_blank" class="center">
-																<img class="img-with-animation skip-lazy  nectar-lazy"
-																	data-delay="0" height="1024" width="1024"
-																	data-animation="fade-in"
-																	data-nectar-img-src="../1.png" src="/../1.png"
-																	alt="" />
-															</a>
+										data-padding-pos="all" data-has-bg-color="false" data-bg-color=""
+										data-bg-opacity="1" data-animation="" data-delay="0">
+										<div class="vc_column-inner">
+											<div class="wpb_wrapper">
+												<div class="img-with-aniamtion-wrap center" data-max-width="100%"
+													data-max-width-mobile="default" data-border-radius="10px"
+													data-shadow="custom" data-animation="fade-in"
+													style="margin-top: 5%; margin-right: 8%; margin-bottom: 5%; margin-left: 8%;">
+													<div class="inner">
+														<div class="hover-wrap"
+															style="box-shadow: 20px 20px 60px 0px rgba(0,0,0,0.5);">
+															<div class="hover-wrap-inner">
+																<a href="https://twitter.com/FunApes_NFT"
+																	target="_blank" class="center">
+																	<img class="img-with-animation skip-lazy  nectar-lazy"
+																		data-delay="0" height="1024" width="1024"
+																		data-animation="fade-in"
+																		data-nectar-img-src="../1.png" src="/../1.png"
+																		alt="" />
+																</a>
+															</div>
 														</div>
 													</div>
 												</div>
-											</div>
-											<div class="wpb_text_column wpb_content_element ">
-												<div class="wpb_wrapper">
-													<h4 style="text-align: center;"><strong>Fun Apes NFT
-															<br />
-														</strong></h4>
+												<div class="wpb_text_column wpb_content_element ">
+													<div class="wpb_wrapper">
+														<h4 style="text-align: center;"><strong>FUN APES NFT
+																<br />
+															</strong></h4>
+													</div>
 												</div>
+
+
+
+
 											</div>
-
-
-
-
 										</div>
 									</div>
-								</div>
 
-	
+
 									<div class="vc_col-sm-4 wpb_column column_container vc_column_container col no-extra-padding inherit_tablet inherit_phone "
 										data-padding-pos="all" data-has-bg-color="false" data-bg-color=""
 										data-bg-opacity="1" data-animation="" data-delay="0">
@@ -1398,7 +1400,7 @@
 												</div>
 												<div class="wpb_text_column wpb_content_element ">
 													<div class="wpb_wrapper">
-														<h4 style="text-align: center;"><strong>Fundaes NFT<br />
+														<h4 style="text-align: center;"><strong>FUNDAES NFT<br />
 															</strong></h4>
 													</div>
 												</div>
@@ -1436,8 +1438,8 @@
 												</div>
 												<div class="wpb_text_column wpb_content_element ">
 													<div class="wpb_wrapper">
-														<h4 style="text-align: center;"><strong>Pepe Ape Yacht
-																Club<br />
+														<h4 style="text-align: center;"><strong>PEPE APE YATCH
+																CLUB<br />
 															</strong></h4>
 													</div>
 												</div>
@@ -1475,7 +1477,7 @@
 												</div>
 												<div class="wpb_text_column wpb_content_element ">
 													<div class="wpb_wrapper">
-														<h4 style="text-align: center;"><strong>Supreme Kong<br />
+														<h4 style="text-align: center;"><strong>SUPREME KONG<br />
 															</strong></h4>
 													</div>
 												</div>
@@ -1603,7 +1605,8 @@
 																		data-display="block" data-style="underline"
 																		data-alignment="left" data-text-color="std">
 																		<h4> <span class="link_wrap"><a
-																					class="link_text" href="#">About
+																					class="link_text"
+																					href="/aboutus.html">About
 																					Us</a></span></h4>
 																	</div>
 																	<div class="nectar-cta  alignment_tablet_default alignment_phone_default display_tablet_inherit display_phone_inherit font_size_desktop_1-3vw font_size_tablet_16px "
