--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -1364,7 +1364,8 @@
 																		data-display="block" data-style="underline"
 																		data-alignment="left" data-text-color="std">
 																		<h4> <span class="link_wrap"><a
-																					class="link_text" href="#">About
+																					class="link_text"
+																					href="/aboutus.html">About
 																					Us</a></span></h4>
 																	</div>
 																	<div class="nectar-cta  alignment_tablet_default alignment_phone_default display_tablet_inherit display_phone_inherit font_size_desktop_1-3vw font_size_tablet_16px "
