--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1266,7 +1266,9 @@
 												<div
 													class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 													<div class="wpb_wrapper">
-														<p style="text-align: center;">Complete the form below with essential details. Our team will promptly review your submission. Fields marked with (*) are mandatory.
+														<p style="text-align: center;">Complete the form below with
+															essential details. Our team will promptly review your
+															submission. Fields marked with (*) are mandatory.
 														</p>
 													</div>
 												</div>
@@ -1362,7 +1364,8 @@
 														<label>Your Name <input type="text" name="name" /></label>
 													</p>
 													<p>
-														<label>Brand/Project Name:* <input type="text" name="brandname" /></label>
+														<label>Brand/Project Name:* <input type="text"
+																name="brandname" /></label>
 													</p>
 													<p>
 														<label>Position* <textarea name="position"></textarea></label>
@@ -1372,11 +1375,11 @@
 																name="twitter" /></label>
 													</p>
 													<p>
-														<label>Email* <textarea  type="email" name="email"></textarea></label>
+														<label>Email* <textarea type="email"
+																name="email"></textarea></label>
 													</p>
 													<p>
-														<label>Website URL <textarea
-																name="website"></textarea></label>
+														<label>Website URL <textarea name="website"></textarea></label>
 													</p>
 													<p>
 														<label>Your Message (Optional) <textarea rows="10"
@@ -1500,7 +1503,8 @@
 																		data-display="block" data-style="underline"
 																		data-alignment="left" data-text-color="std">
 																		<h4> <span class="link_wrap"><a
-																					class="link_text" href="#">About
+																					class="link_text"
+																					href="/aboutus.html">About
 																					Us</a></span>
 																		</h4>
 																	</div>
