--- a/partners/index.html
+++ b/partners/index.html
@@ -1442,8 +1442,7 @@
 												</div>
 												<div class="wpb_text_column wpb_content_element ">
 													<div class="wpb_wrapper">
-														<h4 style="text-align: center;"><strong>PEPE APE YATCH
-																CLUB<br />
+														<h4 style="text-align: center;"><strong>PEPE APE YATCH CLUB<br />
 															</strong></h4>
 													</div>
 												</div>
