--- a/partners/index.html
+++ b/partners/index.html
@@ -915,7 +915,7 @@
 		}
 
 		.wpb_row .vc_row-fluid {
-			/* padding-bottom: 90px; */
+			/* padding-bottom: 90px;ya */
 
 		}
 
@@ -1442,7 +1442,7 @@
 												</div>
 												<div class="wpb_text_column wpb_content_element ">
 													<div class="wpb_wrapper">
-														<h4 style="text-align: center;"><strong>PEPE APE YATCH CLUB<br />
+														<h4 style="text-align: center;"><strong>PEPE APE YACHT CLUB<br />
 															</strong></h4>
 													</div>
 												</div>
