--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1266,9 +1266,7 @@
 												<div
 													class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 													<div class="wpb_wrapper">
-														<p style="text-align: center;">Complete the form below with
-															essential details. Our team will promptly review your
-															submission. Fields marked with (*) are mandatory.
+														<p style="text-align: center;">Complete the form below with essential details. Our team will promptly review your submission. Fields marked with (*) are mandatory.
 														</p>
 													</div>
 												</div>
@@ -1364,22 +1362,22 @@
 														<label>Your Name <input type="text" name="name" /></label>
 													</p>
 													<p>
-														<label>Brand/Project Name:* <input type="text"
-																name="brandname" /></label>
+														<label>Email* <input type="email" name="email" /></label>
+													</p>
+													<p>
+														<label>Twitter Handle* <input type="text"
+																name="twitter" /></label>
+
+													</p>
+													<p>
+														<label>Your Community* <textarea
+																name="community"></textarea></label>
 													</p>
 													<p>
 														<label>Position* <textarea name="position"></textarea></label>
 													</p>
 													<p>
-														<label>Twitter Handle* <input type="text"
-																name="twitter" /></label>
-													</p>
-													<p>
-														<label>Email* <textarea type="email"
-																name="email"></textarea></label>
-													</p>
-													<p>
-														<label>Website URL <textarea name="website"></textarea></label>
+														<label>Subject* <textarea name="subject"></textarea></label>
 													</p>
 													<p>
 														<label>Your Message (Optional) <textarea rows="10"
@@ -1503,8 +1501,7 @@
 																		data-display="block" data-style="underline"
 																		data-alignment="left" data-text-color="std">
 																		<h4> <span class="link_wrap"><a
-																					class="link_text"
-																					href="/aboutus.html">About
+																					class="link_text" href="#">About
 																					Us</a></span>
 																		</h4>
 																	</div>
