--- a/index.html
+++ b/index.html
@@ -3765,7 +3765,7 @@
 																	</div>
 																	<div class="nectar-responsive-text font_size_desktop_3vw font_size_tablet_3vw font_size_phone_16px font_line_height_3vw"
 																		style="color: #a1fccb;">
-																		<p>Custom Twitter Campaigns</p>
+																		<p>Custom Twitter Campaigns.</p>
 																	</div>
 																	<div class="divider-wrap" data-alignment="default">
 																		<div style="height: 15px;" class="divider">
