--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1266,14 +1266,14 @@
 												<div
 													class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 													<div class="wpb_wrapper">
-														<p style="text-align: center;">Please provide all necessary
-															information in the form below. Our team will assess your
-															submission and respond to you promptly.
+														<p style="text-align: center;">Complete the form below with
+															essential details. Our team will promptly review your
+															submission. Fields marked with (*) are mandatory.
 														</p>
 													</div>
 												</div>
 												<div class="divider-wrap" data-alignment="default">
-													<div style="height: 50px;" class="divider"></div>
+
 												</div>
 												<div class="wpcf7 no-js" id="wpcf7-f572-p573-o1" lang="en-US" dir="ltr">
 													<div class="screen-reader-response">
@@ -1359,27 +1359,27 @@
 
 
 												</div>
-												<form name="contact" method="POST" netlify>
+												<!-- <form name="contact" method="POST" netlify>
 													<p>
-														<label>Name* <input type="text" name="name" /></label>
+														<label>Your Name <input type="text" name="name" /></label>
 													</p>
 													<p>
-														<label>Email* <input type="email" name="email" /></label>
-													</p>
-													<p>
-														<label>Twitter Handle* <input type="text"
-																name="twitter" /></label>
-
-													</p>
-													<p>
-														<label>Your Community* <textarea
-																name="community"></textarea></label>
+														<label>Brand/Project Name:* <input type="text"
+																name="brandname" /></label>
 													</p>
 													<p>
 														<label>Position* <textarea name="position"></textarea></label>
 													</p>
 													<p>
-														<label>Subject* <textarea name="subject"></textarea></label>
+														<label>Twitter Handle* <input type="text"
+																name="twitter" /></label>
+													</p>
+													<p>
+														<label>Email* <textarea type="email"
+																name="email"></textarea></label>
+													</p>
+													<p>
+														<label>Website URL <textarea name="website"></textarea></label>
 													</p>
 													<p>
 														<label>Your Message (Optional) <textarea rows="10"
@@ -1389,8 +1389,29 @@
 														<button style="z-index: 10000;" type="submit">Submit
 															Request</button>
 													</p>
-												</form>
+												</form> -->
 											</div>
+											<form name="contact" method="POST" netlify>
+												<p>
+												  <label>Your Name: <input type="text" name="name" /></label>
+												</p>
+												<p>
+												  <label>Your Email: <input type="email" name="email" /></label>
+												</p>
+												<p>
+												  <label>Your Role: <select name="role[]" multiple>
+													<option value="leader">Leader</option>
+													<option value="follower">Follower</option>
+												  </select></label>
+												</p>
+												<p>
+												  <label>Message: <textarea name="message"></textarea></label>
+												</p>
+												<p>
+												  <button type="submit">Send</button>
+												</p>
+											  </form>
+											  
 										</div>
 									</div>
 								</div>
@@ -1503,7 +1524,8 @@
 																		data-display="block" data-style="underline"
 																		data-alignment="left" data-text-color="std">
 																		<h4> <span class="link_wrap"><a
-																					class="link_text" href="#">About
+																					class="link_text"
+																					href="/aboutus.html">About
 																					Us</a></span>
 																		</h4>
 																	</div>
