--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1393,22 +1393,33 @@
 											</div>
 											<form name="contact" method="POST" netlify>
 												<p>
-												  <label>Your Name: <input type="text" name="name" /></label>
+													<label>Your Name <input type="text" name="name" /></label>
 												</p>
 												<p>
-												  <label>Your Email: <input type="email" name="email" /></label>
+													<label>Brand/Project Name:* <input type="text"
+															name="brandname" /></label>
 												</p>
 												<p>
-												  <label>Your Role: <select name="role[]" multiple>
-													<option value="leader">Leader</option>
-													<option value="follower">Follower</option>
-												  </select></label>
+													<label>Position* <textarea name="position"></textarea></label>
 												</p>
 												<p>
-												  <label>Message: <textarea name="message"></textarea></label>
+													<label>Twitter Handle* <input type="text"
+															name="twitter" /></label>
 												</p>
 												<p>
-												  <button type="submit">Send</button>
+													<label>Email* <textarea type="email"
+															name="email"></textarea></label>
+												</p>
+												<p>
+													<label>Website URL <textarea name="website"></textarea></label>
+												</p>
+												<p>
+													<label>Your Message (Optional) <textarea rows="10"
+															name="message"></textarea></label>
+												</p>
+												<p>
+													<button style="z-index: 10000;" type="submit">Submit
+														Request</button>
 												</p>
 											  </form>
 											  
