--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1393,36 +1393,37 @@
 											</div>
 											<form name="contact" method="POST" netlify>
 												<p>
-													<label>Your Name <input type="text" name="name" /></label>
+													<label>Your Name* <input type="text" name="name" /></label>
 												</p>
 												<p>
 													<label>Brand/Project Name:* <input type="text"
-															name="brandname" /></label>
+															name="brand" /></label>
 												</p>
 												<p>
-													<label>Position* <textarea name="position"></textarea></label>
+													<label>Position* <input type="text"
+															name="position" /></label>
 												</p>
 												<p>
-													<label>Twitter Handle* <input type="text"
+													<label>Twitter Handle:* <input type="text"
 															name="twitter" /></label>
 												</p>
 												<p>
-													<label>Email* <textarea type="email"
-															name="email"></textarea></label>
+													<label>Your Email: <input type="email" name="email" /></label>
+												</p>
+
+											
+												<p>
+													<label>Website URL <input type="text"
+															name="brand" /></label>
 												</p>
 												<p>
-													<label>Website URL <textarea name="website"></textarea></label>
+													<label>Message: <textarea name="message"></textarea></label>
 												</p>
 												<p>
-													<label>Your Message (Optional) <textarea rows="10"
-															name="message"></textarea></label>
+													<button type="submit">Send</button>
 												</p>
-												<p>
-													<button style="z-index: 10000;" type="submit">Submit
-														Request</button>
-												</p>
-											  </form>
-											  
+											</form>
+
 										</div>
 									</div>
 								</div>
