--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1408,7 +1408,7 @@
 															name="twitter" /></label>
 												</p>
 												<p>
-													<label>Your Email: <input type="email" name="email" /></label>
+													<label>Your Email* <input type="email" name="email" /></label>
 												</p>
 
 											
@@ -1417,7 +1417,7 @@
 															name="brand" /></label>
 												</p>
 												<p>
-													<label>Message: <textarea name="message"></textarea></label>
+													<label>Message <textarea name="message"></textarea></label>
 												</p>
 												<p>
 													<button type="submit">Send</button>
