--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1417,7 +1417,7 @@
 															name="brand" /></label>
 												</p>
 												<p>
-													<label>Message <textarea name="message"></textarea></label>
+													<label>Message <textarea rows="10" name="message"></textarea></label>
 												</p>
 												<p>
 													<button type="submit">Send</button>
