--- a/index.html
+++ b/index.html
@@ -5932,9 +5932,11 @@
 																						data-delay="0" height="800"
 																						width="800"
 																						data-animation="none"
+																						data-nectar-img-src="faq.jpeg"
 																						src="data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%20800%20800'%2F%3E"
 																						alt=""
-																						sizes="(max-width: 800px) 100vw, 800px" />
+																						data-nectar-img-srcset="faq.jpeg"
+																					 />
 																				</div>
 																			</div>
 																		</div>
