--- a/partner-application/index.html
+++ b/partner-application/index.html
@@ -1414,7 +1414,7 @@
 											
 												<p>
 													<label>Website URL <input type="text"
-															name="brand" /></label>
+															name="website" /></label>
 												</p>
 												<p>
 													<label>Message <textarea rows="10" name="message"></textarea></label>
